--- a/youtube-client/src/App/Carousel/Carousel.css
+++ b/youtube-client/src/App/Carousel/Carousel.css
@@ -35,12 +35,15 @@
   font-size: 1.5rem;
 }
 
-.carousel__list{
+ul{
   margin: 0;
   padding: 0;
   display: flex;
   width: 100%;
   list-style-type: none;
+}
+
+.carousel__list{
   transform: translateX(calc(-1 * var(--current-page) * 100vw));
   transition: transform 300ms ease-in-out;
 }
@@ -48,20 +51,20 @@
 .carousel__list_item{
   flex-shrink: 0;
   width: var(--item-width);
-  height: calc(1.2 * var(--item-width));
 }
 
 .clip{
   width: 80%;
   margin: 2rem auto;
-  height: 100%;
+  height: calc(1.2 * var(--item-width));
   overflow: hidden;
   padding: 0.625rem 0;
   background: #ffffff;
   border-radius: 0.25rem;
   display: flex;
   flex-direction: column;
-  transition: all 300ms ease-in-out;
+  transition: background-color 300ms ease-in-out,
+    transform 300ms ease-in-out;
 }
 
 .clip:hover{
@@ -157,4 +160,33 @@
   font-style: italic;
   text-align: justify;
   word-break: break-word;
+}
+
+.carousel__nav{
+  justify-content: center;
+  width: 60%;
+  margin: auto;
+  flex-wrap: wrap;
+}
+
+.carousel__item_button{
+  border: 1px solid #333333;
+  background-color: #ffffff;
+  border-radius: 50%;
+  width: 1.5rem;
+  height: 1.5rem;
+  padding: 0;
+  margin: 0.25rem;
+  color: #ffffff;
+  line-height: 1;
+  cursor: pointer;
+  flex-shrink: 0;
+}
+
+.carousel__item_button:hover{
+  background-color: #ff3131;
+}
+
+.carousel__item_button--current{
+  background-color: #ff3131;
 }
