--- a/youtube-client/src/App/Carousel/Carousel.css
+++ b/youtube-client/src/App/Carousel/Carousel.css
@@ -169,6 +169,10 @@ ul{
   flex-wrap: wrap;
 }
 
+.carousel__nav_item{
+  position: relative;
+}
+
 .carousel__item_button{
   border: 1px solid #333333;
   background-color: #ffffff;
@@ -184,9 +188,27 @@ ul{
 }
 
 .carousel__item_button:hover{
-  background-color: #ff3131;
+  border-color: #ff3131;
 }
 
 .carousel__item_button--current{
   background-color: #ff3131;
+}
+
+.carousel__nav_tooltip{
+  position: absolute;
+  bottom: calc(100% + 0.25rem);
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 0.5rem 0.75rem;
+  min-width: 2rem;
+  border-radius: 0.25rem;
+  background-color: #106544;
+  color: antiquewhite;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.carousel__item_button.clicked+.carousel__nav_tooltip{
+  opacity: 1;
 }
