feat: add palette initial layout

--- a/animation-player/src/app/header/header.component.pug
+++ b/animation-player/src/app/header/header.component.pug
@@ -1,4 +1,4 @@
-header.header.shadow.align-items-center
+header.header.align-items-center
   input#navigation__collapse.navigation__collapse.hidden(type="checkbox" name="navigation__collapse")
   label.navigation__collapse_label(for="navigation__collapse")
     span.navigation__collapse_label_text
