--- a/animation-player/src/app/header/header.component.scss
+++ b/animation-player/src/app/header/header.component.scss
@@ -2,6 +2,9 @@
   position: relative;
   display: flex;
   align-items: center;
+  box-shadow:
+    0 0 4px 0 rgba(0, 0, 0, 0.12),
+    0 4px 4px 0 rgba(0, 0, 0, 0.24);
 
   &__title{
     font-size: 1.5rem;
