feat: implement preview block initial component. Implement FPS range selector

--- a/animation-player/src/styles.css
+++ b/animation-player/src/styles.css
@@ -5,6 +5,10 @@ html{
   color: rgba(0, 0, 0, 0.54);
 }
 
+*{
+  box-sizing: border-box;
+}
+
 .shadow{
   box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);
 }
