feat: implement initial components for frames carousel

--- a/animation-player/src/app/palette/palette.component.pug
+++ b/animation-player/src/app/palette/palette.component.pug
@@ -1,7 +1,8 @@
 app-header
 .palette-body
   .instruments-wrapper
-  .frames-carousel
+  .frames-carousel-wrapper
+    frames-carousel
   .frame-wrapper
   .preview-wrapper
     preview
