feat: display fram number inframes carousel

--- a/animation-player/src/app/palette/frames-carousel/frame/frame.component.pug
+++ b/animation-player/src/app/palette/frames-carousel/frame/frame.component.pug
@@ -1,2 +1,3 @@
 .frame([ngClass]="{'active': currentIndex === frameIndex}")
+  span.frame__number {{frameIndex}}
   canvas-block([picture]="frame", [size]="96")
