--- a/animation-player/src/app/palette/frames-carousel/frame/frame.component.scss
+++ b/animation-player/src/app/palette/frames-carousel/frame/frame.component.scss
@@ -26,4 +26,17 @@
       border-color: transparent transparent transparent #ffd700;
     }
   }
+
+  &__number{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 1.875rem;
+    height: 1.875rem;
+    background-color: #ffd700;
+    line-height: 1.875rem;
+    text-align: center;
+    font-weight: bold;
+    font-size: 0.875rem;
+  }
 }
